--- a/interactive_projector.html
+++ b/interactive_projector.html
@@ -239,12 +239,12 @@
                 const newD = this._generateNewD(width, height, radius);
 
                 const maskPath = svg.querySelector("defs mask path");
-                const oldD = maskPath.getAttribute("d");
-                if (oldD && oldD !== newD) this._morphPath(maskPath, oldD, newD);
+                const maskPathOldD = maskPath.getAttribute("d");
+                if (maskPathOldD && maskPathOldD !== newD) this._morphPath(maskPath, maskPathOldD, newD);
 
                 const clipPath = svg.querySelector("defs clipPath path");
-                oldD = clipPath.getAttribute("d");
-                if (oldD && oldD !== newD) this._morphPath(clipPath, oldD, newD);
+                const clipPathOldD = clipPath.getAttribute("d");
+                if (clipPathOldD && clipPathOldD !== newD) this._morphPath(clipPath, clipPathOldD, newD);
 
                 const maskedPath = svg.querySelector("path[mask]");
                 if (maskPath) maskedPath.setAttribute("d", newD);
