--- a/interactive_projector.html
+++ b/interactive_projector.html
@@ -34,9 +34,13 @@
             button: "widget-button"
         }
 
-        function isOverlapping(element1, element2) {
-            const rect1 = element1.getBoundingClientRect();
-            const rect2 = element2.getBoundingClientRect();
+        function isOverlapping(elementOrRect1, elementOrRect2) {
+            const rect1 = elementOrRect1 instanceof Element
+                ? elementOrRect1.getBoundingClientRect()
+                : elementOrRect1;
+            const rect2 = elementOrRect2 instanceof Element
+                ? elementOrRect2.getBoundingClientRect()
+                : elementOrRect2;
 
             return !(
                 rect1.right < rect2.left ||    //rectONE is completely to the left of rectTWO
@@ -47,37 +51,40 @@
         }
 
         let wasOverlapping = false;
+        let fgBox = null;
 
         function callOnce() {
             const projector = new Projector();
             const el = projector.elements;
-
             const manager = new DesignAssetManager();
             const activeAsset = manager.getCurrentTarget();
 
-            const isCurrentlyOverlapping = activeAsset && isOverlapping(activeAsset.assetEl, el.foreground);
+            const isCurrentlyOverlapping = activeAsset && isOverlapping(activeAsset.assetEl, fgBox || el.foreground);
 
             if (isCurrentlyOverlapping !== wasOverlapping) {
                 if (isCurrentlyOverlapping) {
+                    fgBox = el.foreground.getBoundingClientRect(); // freeze at start
                     activeAsset.activate();
                 } else if (activeAsset) {
                     activeAsset.deactivate();
+                    fgBox = el.foreground.getBoundingClientRect(); // re-freeze after deactivation
                 }
                 wasOverlapping = isCurrentlyOverlapping;
             }
         }
 
+
         //util functions
-        function throttle(func, delay) {
-            let lastCall = 0;
-            return (...args) => {
-                const now = Date.now();
-                if (now - lastCall >= delay) {
-                    lastCall = now;
-                    func(...args);
-                }
-            };
-        }
+        // function throttle(func, delay) {
+        //     let lastCall = 0;
+        //     return (...args) => {
+        //         const now = Date.now();
+        //         if (now - lastCall >= delay) {
+        //             lastCall = now;
+        //             func(...args);
+        //         }
+        //     };
+        // }
 
         function hideElement(el, status) {
             if (!el) return;
@@ -110,9 +117,7 @@
                     userImg: "67e9f5d9c5a5ce602fac3f88",
                     userName: "67e9f5d928c042804157b29a",
                     closeBtn: "67eacf150c89adeaeb487c02",
-                    //closeBtnDisabled: "67eacd2f54be5d50b17f6a42",
-                    actionBtn: "67eacf1511d353e4afae09d2",
-                    //actionBtnDisabled: "67eace502229b047344ff591"
+                    actionBtn: "67eacf1511d353e4afae09d2"
                 };
 
                 // DOM references
@@ -133,10 +138,7 @@
                     userImg: this._queryShape(this.ids.userImg, 'ellipse[mask]'),
 
                     closeBtn: this._queryButton(this.ids.closeBtn),
-                    //closeBtnDisabled: this._queryShape(this.ids.closeBtnDisabled),
-
-                    actionBtn: this._queryButton(this.ids.actionBtn),
-                    //actionBtnDisabled: this._queryShape(this.ids.actionBtnDisabled)
+                    actionBtn: this._queryButton(this.ids.actionBtn)
                 };
 
                 this.originX = 0;
@@ -202,19 +204,33 @@
                 containerEl.style.width = `${width}px`;
                 containerEl.style.height = `${height}px`;
                 containerEl.style.transform = "scale(1)";
-                applyTransition(containerEl, ["width", "height"]);
+                //applyTransition(containerEl, ["width", "height"]);
             }
 
             _morphPath(pathEl, oldD, newD, options = {}) {
                 const {
-                    duration = 0.6,
-                    easing = "ease-in-out",
+                    duration = 600, // in ms
                     maxSegmentLength = 2
                 } = options;
 
                 try {
-                    const interpolator = window.interpolate(oldD, newD, { maxSegmentLength });
-                    window.animate(pathEl, { d: interpolator }, { duration, easing });
+                    const interpolator = interpolate(oldD, newD, { maxSegmentLength });
+
+                    const start = performance.now();
+
+                    function tick(now) {
+                        const elapsed = now - start;
+                        const progress = Math.min(elapsed / duration, 1);
+
+                        const currentD = interpolator(progress);
+                        pathEl.setAttribute("d", currentD);
+
+                        if (progress < 1) {
+                            requestAnimationFrame(tick);
+                        }
+                    }
+
+                    requestAnimationFrame(tick);
                 } catch (e) {
                     console.warn("ERROR: morphing failed, fallback to skip animation");
                     console.error(e);
@@ -223,13 +239,18 @@
             }
 
             resizeSvgContainer(containerEl, width, height, radius) {
+                console.log(`   1. Entered reSizeSvg(), attempting to get containerEl.`);
                 if (!containerEl) return;
+                console.log(`   2. Got containerEl successfully, attempting to query svg tag within.`);
                 const svg = containerEl.querySelector("svg");
                 if (!svg) return;
+                console.log(`   3. Got svg successfully, calling setSvgDimensions.`);
 
                 this._setSvgDimensions(containerEl, svg, width, height);
 
+                console.log(`   4. Setted dimensions successfully successfully, calling generating newD path.`);
                 const newD = this._generateNewD(width, height, radius);
+                console.log(`   5. Generated newD path successfully, creating selectors array.`);
 
                 const selectors = [
                     "defs mask path",
@@ -237,15 +258,20 @@
                     "path[mask]",
                     "path[clip-path]"
                 ];
+                console.log(`   6. Created array successfully, entering loop.`);
 
                 for (const selector of selectors) {
+                    console.log(`       1# Entered [${selector}], querying path.`);
                     const path = svg.querySelector(selector);
                     if (!path) continue;
+                    console.log(`       2# Queried path successfully, getting oldD.`);
 
                     const oldD = path.getAttribute("d");
                     if (!oldD || oldD === newD) continue;
+                    console.log(`       3# Got oldD successfully, calling morphPath().`);
 
                     this._morphPath(path, oldD, newD);
+                    console.log(`       4# Called morphPath successfully, ${selector} is complete.`);
                 }
             }
 
@@ -345,56 +371,44 @@
             }
 
             activate() {
-                console.log(`ACTIVATING ${this.id} attempting to get projector singleton`);
+                console.log(`=> ACTIVATING ${this.id}.`);
                 //get (or create) the projector obj
                 const projector = new Projector();
-                console.log(`ACTIVATING ${this.id} projector successfully created, moving to create el alias`);
                 //alias (for readability)
                 const el = projector.elements;
-                console.log(`ACTIVATING ${this.id} alias successfully created, moving to call setState`);
 
                 //switches the projector to appear on (visual effect)
                 projector.setProjectorState(true, this.isActionable);
-                console.log(`ACTIVATING ${this.id} settedState, moving to call mediafactory`);
                 //sets the projector size and positioning based on the mediaType (of the designAsset)
                 const media = MediaFactory(this.mediaType);
-                console.log(`ACTIVATING ${this.id} called mediafactory, moving to call activate`);
                 media.activate();
-                console.log(`ACTIVATING ${this.id} called activate, moving to call hideElement`);
 
                 //fills in the projector with the design asset (visual effect)
                 hideElement(this.pictureEl, false);
-                console.log(`ACTIVATING ${this.id} called hideElement, moving to change text and titles`);
 
                 //sets the text based on the designAsset
                 projector.setText(el.title, this.title);
                 projector.setText(el.text, this.text);
-                console.log(`ACTIVATING ${this.id} changed text and titles successfully, returning.`);
+                console.log(`=> ACTIVATING ${this.id}, returning.`);
             }
 
             deactivate() {
-                console.log(`DEACTIVATING ${this.id} attempting to get projector singleton`);
+                console.log(`=> DEACTIVATING ${this.id}.`);
                 const projector = new Projector();
-                console.log(`DEACTIVATING ${this.id} projector successfully created, moving to create el alias`);
                 const el = projector.elements;
 
-                console.log(`DEACTIVATING ${this.id} alias successfully created, moving to call setState`);
                 projector.setProjectorState(false, false);
-                console.log(`DEACTIVATING ${this.id} settedState, moving to call mediafactory`);
 
                 const media = MediaFactory(this.mediaType);
-                console.log(`DEACTIVATING ${this.id} called mediafactory, moving to call deactivate`);
                 media.deactivate();
-                console.log(`DEACTIVATING ${this.id} called deactivate, moving to call hideElement`);
 
                 hideElement(this.pictureEl, true);
-                console.log(`DEACTIVATING ${this.id} called hideElement, moving to change text and titles`);
 
                 const defaultTitle = "abra cada bra";
                 const defaultText = "moooooove something inside the super special magical projector pro plus R/m skibidi fast. COMES WITH..? YOU/ gusessed it ArITFICIAL intelligence.";
                 projector.setText(el.title, defaultTitle);
                 projector.setText(el.text, defaultText);
-                console.log(`DEACTIVATING ${this.id} changed text and titles successfully, returning.`);
+                console.log(`=> DEACTIVATING ${this.id}, returning.`);
             }
         }
 
@@ -506,46 +520,44 @@
                 const projector = new Projector();
                 const el = projector.elements;
 
-                projector.setOrigin(0, 0);
+                //projector.setOrigin(0, 0);
 
                 //TEXT: position
-                projector.applyTransform(el.title, 62, 0);
-                projector.applyTransform(el.text, 62, 0);
+                // projector.applyTransform(el.title, 62, 0);
+                // projector.applyTransform(el.text, 62, 0);
 
                 //PROJECTOR: resize 
                 projector.resizeSvgContainer(el.background, 517, 355, 15);
                 projector.resizeSvgContainer(el.foreground, 499, 281, 15);
 
                 //PROJECTOR: hide
-                hideElement(el.hintText, true);
+                // hideElement(el.hintText, true);
 
                 //PROJECTOR: move
-                projector.applyTransform(el.background, -63, 0);
-                projector.applyTransform(el.foreground, -62.99, 0);
-                projector.applyTransform(el.userImg, -63.99, 0);
-                projector.applyTransform(el.userName, -63.99, 0);
-                projector.applyTransform(el.closeBtn, 156, 0);
-                projector.applyTransform(el.actionBtn, 156, 0);
-                //projector.applyTransform(el.actionBtnDisabled, 156, 0);
+                // projector.applyTransform(el.background, -63, 0);
+                // projector.applyTransform(el.foreground, -62.99, 0);
+                // projector.applyTransform(el.userImg, -63.99, 0);
+                // projector.applyTransform(el.userName, -63.99, 0);
+                // projector.applyTransform(el.closeBtn, 156, 0);
+                // projector.applyTransform(el.actionBtn, 156, 0);
             }
             deactivate() {
                 const projector = new Projector();
                 const el = projector.elements;
 
-                projector.resetTransform(el.title);
-                projector.resetTransform(el.text);
+                // projector.resetTransform(el.title);
+                // projector.resetTransform(el.text);
                 projector.resetTransform(el.background);
                 projector.resetTransform(el.foreground);
-                projector.resetTransform(el.userImg);
-                projector.resetTransform(el.userName);
-                projector.resetTransform(el.closeBtn);
-                projector.resetTransform(el.actionBtn);
-                //projector.resetTransform(el.actionBtnDisabled);
+                // projector.resetTransform(el.userImg);
+                // projector.resetTransform(el.userName);
+                // projector.resetTransform(el.closeBtn);
+                // projector.resetTransform(el.actionBtn);
 
                 projector.resizeSvgContainer(el.background, 298, 355, 15);
                 projector.resizeSvgContainer(el.foreground, 281, 281, 15);
 
-                hideElement(el.hintText, false);
+                // hideElement(el.hintText, false);
             }
         }
 
@@ -616,7 +628,9 @@
         const designAssets = rawData.map(createDesignAssetFromData);
 
         //listener (optimize??)
-        $(document).on('mousemove touchmove', throttle(callOnce, 120));
+        document.addEventListener("mousemove", callOnce);
+        document.addEventListener("touchmove", callOnce);
+
         //initial call (upon page load)
         callOnce();
     </script>
